k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-board
  namespace: postapp
spec:
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: react-board-pod
  template:
    metadata:
      labels:
        app: react-board-pod
    spec:
      containers:
      - name: react-board-container
        image: bellipetti/react-board:94bba1374b94d4f20d54f78500808742eb0a0020
        ports:
        - containerPort: 80
